--- a/form.html
+++ b/form.html
@@ -8,37 +8,23 @@
 	<header class="page-header">
 		<div class="page-header__container">
 			<div class="page-header__logo">
-				<img src="#" alt="Логотип Мишка">
+				<a href="index.html">Логотип Мишка</a>
 			</div>
 			<nav class="page-header__menu">
-				<button class="main-nav__toggle" type="button">Открыть меню</button>
+				<button class="page-header__toggle" type="button">Открыть меню</button>
 				<ul class="page-header__menu-items">
-					<li class="page-header__menu-item page-header__menu-item--catalog">
+					<li class="page-header__menu-item">
 						<a href="catalog.html">Каталог товаров</a>
 					</li>
-					<li class="page-header__menu-item page-header__menu-item--knitting">
-						<a href="form.html">Вязание на заказ</a>
+					<li class="page-header__menu-item page-header__menu-item--icon page-header__menu-item--search">
+						<a href="form.html">Поиск по сайту</a>
 					</li>
-					<li class="page-header__menu-item page-header__menu-item--new">
-						<a href="catalog.html">Новые поступления</a>
-					</li>
-					<li class="page-header__menu-item page-header__menu-item--sales">
-						<a href="#">Распродажа</a>
+					<li class="page-header__menu-item page-header__menu-item--icon page-header__menu-item--basket">
+						<a href="catalog.html">Корзина: пока пуста</a>
 					</li>
 				</ul>
 			</nav>
-			<div class="page-header__user-menu">
-				<ul class="user-menu">
-					<li class="page-header__menu-item page-header__menu-item--search">
-						<a href="#">Поиск по сайту</a>
-					</li>
-					<li class="page-header__menu-item page-header__menu-item--basket">
-						 <a href="#">Корзина: пока пуста</a>
-					</li>
-				</ul>
-			</div>
-			<span class="page-header__delivery">Бесплатная доставка по России</span>
-        </div>
+		</div>
 	</header>
 
 	<main class="content">
@@ -148,7 +134,7 @@
 					</ul>
 					<div class="submit-area">
 						<span class="order-form__required">Все поля являются обязательными</span>
-						<button type="submit" class="btn">Отправить заказ</button>   
+						<button type="submit" class="btn">Отправить заказ</button>
 					</div>
 				</fildset>
 
@@ -158,14 +144,16 @@
 
 	<footer class="page-footer">
 		<div class="page-footer__container">
-			<ul class="page-footer__social-items">
-				<li class="page-footer__social-item page-footer__social-item--inst"></li>
-				<li class="page-footer__social-item page-footer__social-item--fb"></li>
-				<li class="page-footer__social-item page-footer__social-item--tw"></li>
-			</ul>
+			<div class="socials">
+				<ul class="socials__social-items">
+					<li class="socials__social-item socials__social-item--icon socials__social-item--inst">инстаграмм</li>
+					<li class="socials__social-item socials__social-item--icon socials__social-item--fb">фейсбук</li>
+					<li class="socials__social-item socials__social-item--icon socials__social-item--tw">твитер</li>
+				</ul>
+			</div>
 			<div class="page-footer__copyright">
 				Разработано:
-				<a class="btn  page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
+				<a class="btn page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
 			</div>
 		</div>
 	</footer>
