--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 					<li class="page-header__menu-item">
 						<a href="catalog.html">Каталог товаров</a>
 					</li>
+					<li class="page-header__menu-item">
+						<a href="form.html">Вязание на заказ</a>
+					</li>
 					<li class="page-header__menu-item page-header__menu-item--icon page-header__menu-item--search">
-						<a href="form.html">Поиск по сайту</a>
+						<a href="#">Поиск по сайту</a>
 					</li>
 					<li class="page-header__menu-item page-header__menu-item--icon page-header__menu-item--basket">
-						<a href="catalog.html">Корзина: пока пуста</a>
+						<a href="#">Корзина: пока пуста</a>
 					</li>
 				</ul>
 			</nav>
@@ -30,7 +33,7 @@
 
 	<main class="content">
 		<div class="page-title">
-			<h1>Милые штуки ручной работы для дома</h1>
+			<h1>Милые штуки ручной работы&nbsp;для&nbsp;дома</h1>
 		</div>
 		<div class="page-menu">
 			<div class="page-menu__items">
@@ -65,6 +68,31 @@
 				<img src="#" alt="Корзинка красивая" class="product-of-week__pic">
 				<span class="product-of-week__value">Цена: 990 руб.</span>
 				<a href="#" class="btn">Заказать</a>
+			</div>
+			<div class="in-basket">
+				<div class="in-basket__title">
+					<h1>Добавить в&nbsp;корзину</h1>
+					<span class="in-basket__subtitle">Выберите размер:</span>
+				</div>
+				<form action="#" class="in-basket-form" method="post">
+					<ul class="in-basket-form__items">
+						<li class="in-basket-form__item">
+							<input type="radio" name="radiogroup" value="S" id="radio-size1">
+							<label class="order-form__filter-checkbox" for="radio-size2">S</label>
+						</li>
+						<li class="in-basket-form__item">
+							<input type="radio" name="radiogroup" value="M" id="radio-size2">
+							<label class="order-form__filter-checkbox" for="radio-size2">M</label>
+						</li>
+						<li class="in-basket-form__item">
+							<input type="radio" name="radiogroup" value="L" id="radio-size3">
+							<label class="order-form__filter-checkbox" for="radio-size3">"L"</label>
+						</li>
+					</ul>
+					<div class="btn in-basket-form__btn">
+						<input type="submit" value="Добавить">
+					</div>
+				</form>
 			</div>
 		</section>
 
