Разметка 1 страницы - полная v2

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 			</div>
 		</section>
 
+		<div class="separator"></div>
+
 		<section class="advantages">
 			<div class="content__container">
 				<div class="advantages__title">
@@ -131,6 +133,8 @@
 				<a href="#" class="btn">Написать</a>
 			</div>
 		</section>
+
+		<div class="separator"></div>
 
 		<section class="contacts">
 			<div class="content__container">
