--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 	</header>
 
 	<main class="content">
-		<div class="page-title">
+		<div class="page-title page-title--bg">
 			<h1>Милые штуки ручной работы&nbsp;для&nbsp;дома</h1>
 		</div>
 		<div class="page-menu">
 			<div class="page-menu__items">
-				<a href="#" class="product__item">Предметы интерьера</a>
-				<a href="#" class="product__item">Детские игрушки</a>
+				<a href="#" class="page-menu__item">Предметы интерьера</a>
+				<a href="#" class="page-menu__item">Детские игрушки</a>
 			</div>
 		</div>
 
